# project-insights-desktop

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
docs/01-context/: core.md
docs/02-architecture/: architecture.md  critical-logic-map.md
docs/03-execution/: field-validation-baseline.md  machine-first-export-contract.md  starter-pack.md
docs/03-execution/examples/: project-insights-export-example.json
docs/04-rules/: anti-patterns.md  engineering-rules.md
docs/context/: context-base64.txt  context-source.txt
docs/primavera/: xer-contract.md
scripts/: generate-test-dashboard.mjs
shared/: license-contract.json
src/: main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: license_public_key.rs  license_storage.rs  licensing_runtime.rs  logger.rs  main.rs  mpp_conversion.rs  pdf_export.rs
src/app/comparison/: compare-project-versions.test.ts  compare-project-versions.ts
src/app/history/: snapshot-history.test.ts  snapshot-history.ts  snapshot-store.ts
src/app/license/: activate-license.test.ts  activate-license.ts  clear-invalid-license-state.ts  license-live.integration.test.ts  license-service.test.ts  license-service.ts  licensing-contract.test.ts  load-license.ts  load-stored-license-state.test.ts  load-stored-license-state.ts  resolve-license-state.test.ts  resolve-license-state.ts  save-license.ts  validate-license.test.ts  validate-license.ts  verify-license.test.ts  (+1 more)
src/ui/: App.tsx  app.css
tools/: licensing-log-summary.mjs
tools/license-admin/: README.md  package.json
tools/license-admin-ui/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
tools/license-admin-ui/src-tauri/: Cargo.toml  tauri.conf.json
tools/license-admin-ui/src-tauri/src/: commands.rs  main.rs
tools/license-generator/: package.json
(+148 files in other folders)
