[package]
name = "cannaconverter-2"
version = "0.1.1"
description = "CannaConverter 2.0 desktop app"
authors = ["Rafael"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
base64 = "0.22"
ed25519-dalek = "2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.8", features = [ "dialog-save", "dialog-open", "fs-read-file", "fs-read-dir", "fs-write-file", "fs-create-dir", "fs-exists", "shell-open"] }
quick-xml = "0.38"
sha2 = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
