[package]
name = "license-admin-ui"
version = "0.1.0"
description = "License Admin UI"
authors = ["Rafael"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.8", features = ["dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "fs-create-dir", "fs-exists", "shell-open"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
